Feature/num 2169 deletion of unapproved users (#385)
* test commit

* [NUM-2169] - Deletion of unapproved users

* [NUM-2169] - Deletion of unapproved users

* [NUM-2169] - Deletion of unapproved users. Fixing tests issues.

* [NUM-2169] - Deletion of unapproved users. After Cristina review.

* [NUM-2169] - Deletion of unapproved users. After Cristina review. Some sonar enhancement.

---------

Co-authored-by: Marin <marin@bend.md>