@@ -7,6 +7,7 @@ import de.vitagroup.num.domain.admin.UserDetails;
 import de.vitagroup.num.domain.dto.SearchCriteria;
 import de.vitagroup.num.domain.dto.SearchFilter;
 import de.vitagroup.num.domain.dto.UserNameDto;
+import de.vitagroup.num.domain.repository.UserDetailsRepository;
 import de.vitagroup.num.domain.specification.UserDetailsSpecification;
 import de.vitagroup.num.mapper.OrganizationMapper;
 import de.vitagroup.num.service.exception.BadRequestException;
@@ -36,16 +37,22 @@ import org.springframework.stereotype.Service;
 import javax.annotation.Nullable;
 import javax.transaction.Transactional;
 import javax.validation.constraints.NotNull;
+import java.sql.Timestamp;
+import java.time.LocalDateTime;
+import java.time.ZoneId;
+import java.time.ZoneOffset;
 import java.util.*;
 import java.util.concurrent.ConcurrentMap;
 import java.util.stream.Collectors;
 
 import static de.vitagroup.num.domain.templates.ExceptionsTemplate.*;
+import static java.util.Objects.isNull;
 
 @Slf4j
 @Service
 @AllArgsConstructor
 public class UserService {
+  private final UserDetailsRepository userDetailsRepository;
 
   private static final int MAX_USER_COUNT = 100000;
 
@@ -224,7 +231,7 @@ public class UserService {
       removeRoles =
           existingRoles.stream()
               .filter(role -> !roleNames.contains(role.getName()))
-              .collect(Collectors.toList())
+              .toList()
               .toArray(new Role[] {});
 
       addRoles =
@@ -238,7 +245,7 @@ public class UserService {
                       throw new BadRequestException(UserService.class, UNKNOWN_ROLE);
                     }
                   })
-              .collect(Collectors.toList())
+              .toList()
               .toArray(new Role[] {});
 
       if (Arrays.stream(removeRoles)
@@ -426,12 +433,11 @@ public class UserService {
         organizationId = loggedInUser.getOrganization().getId();
       }
     }
-    UserDetailsSpecification userDetailsSpecification = UserDetailsSpecification.builder()
+    return UserDetailsSpecification.builder()
             .approved(approved)
             .loggedInUserOrganizationId(organizationId)
             .usersUUID(usersUUID)
             .build();
-    return userDetailsSpecification;
   }
 
   private void sortUsers(List<User> users, SearchCriteria searchCriteria) {
@@ -440,9 +446,9 @@ public class UserService {
             Sort.Direction.valueOf(searchCriteria.getSort().toUpperCase()) : Sort.Direction.DESC;
     Comparator<User> userComparator = getComparator(field);
     if (sortOrder.isAscending()) {
-      Collections.sort(users, Comparator.nullsLast(userComparator));
+      users.sort(Comparator.nullsLast(userComparator));
     } else {
-      Collections.sort(users, Comparator.nullsLast(userComparator.reversed()));
+      users.sort(Comparator.nullsLast(userComparator.reversed()));
     }
   }
 
@@ -587,6 +593,47 @@ public class UserService {
       initializeUsersCache();
     }
   }
+  private void deleteNotApprovedUser(UserDetails userDetails) {
+  	String userId = userDetails.getUserId();
+    try {
+		if (userId != null){
+
+          Timestamp createdAt;
+          if (isNull(userDetails.getCreatedDate())) {
+            User userForDeletion = keycloakFeign.getUser(userDetails.getUserId());
+            if (isNull(userForDeletion.getCreatedTimestamp())){
+              return;
+            } else {
+              createdAt = new Timestamp(userForDeletion.getCreatedTimestamp());
+            }
+          } else {
+            createdAt = new Timestamp(userDetails.getCreatedDate().toInstant(ZoneOffset.UTC).toEpochMilli());
+          }
+
+          Date createdAtDate=new Date(createdAt.getTime());
+          boolean shouldDelete = LocalDateTime.from(createdAtDate.toInstant().atZone(ZoneId.of("UTC"))).
+                  plusDays(30).isBefore(LocalDateTime.now());
+          if (shouldDelete) {
+            keycloakFeign.deleteUser(userId);
+            userDetailsService.deleteUserDetails(userId);
+            log.warn("- deleteUnapprovedUsersAfter30Days - userID: {} isApproved: {} deletedUser: {}", userId, userDetails.isApproved(), userDetails);
+          }
+        }
+    } catch (FeignException.BadRequest | FeignException.InternalServerError e) {
+      throw new SystemException(UserService.class, AN_ERROR_HAS_OCCURRED_CANNOT_RETRIEVE_USERS_PLEASE_TRY_AGAIN_LATER,
+              String.format(AN_ERROR_HAS_OCCURRED_CANNOT_RETRIEVE_USERS_PLEASE_TRY_AGAIN_LATER, e.getMessage()));
+    } catch (FeignException.NotFound e) {
+      log.warn("User not found in keycloak: {}", userId);
+      throw new ResourceNotFound(UserService.class, USER_NOT_FOUND, String.format(USER_NOT_FOUND, userId));
+    }
+  }
+
+  @Scheduled(cron = "${user-service.delete-users-cron}", zone = "UTC")//0 0 5 * * *
+  @Transactional
+  public void deleteUnapprovedUsersAfter30Days() {
+    List<UserDetails> users = userDetailsRepository.findAllByApproved(false).orElse(new ArrayList<>());
+    users.forEach(this::deleteNotApprovedUser);
+  }
 
   @CachePut(cacheNames = USERS_CACHE, key = "#userIdToChange")
   @Transactional
@@ -616,7 +663,7 @@ public class UserService {
   /**
    * Retrieved a list of users UUID that match the search criteria
    * @param search A string contained in username, first or last name, or email
-   * @return
+   * @return a Set of filteredUsers
    */
   public Set<String> findUsersUUID(String search) {
     return filterKeycloakUsers(search, Collections.emptyList());
@@ -628,8 +675,7 @@ public class UserService {
     if ((StringUtils.isNotEmpty(search) || CollectionUtils.isNotEmpty(roles)) && usersCache != null && usersCache.getNativeCache().size() != 0) {
       ConcurrentMap<Object, Object> users = usersCache.getNativeCache();
       for (Map.Entry<Object, Object> entry : users.entrySet()) {
-        if (entry.getValue() instanceof User) {
-          User user = (User) entry.getValue();
+        if (entry.getValue() instanceof User user) {
           if (StringUtils.isNotEmpty(search) && CollectionUtils.isNotEmpty(roles)) {
             if ((StringUtils.containsIgnoreCase(user.getFullName(), search) || StringUtils.containsIgnoreCase(user.getEmail(), search)) &&
                     CollectionUtils.containsAny(user.getRoles(), roles)) {
@@ -647,6 +693,7 @@ public class UserService {
     }
     return Collections.emptySet();
   }
+
   private void updateName(String userId, UserNameDto userNameDto) {
     Map<String, Object> userRaw = keycloakFeign.getUserRaw(userId);
     if (userRaw == null) {
